@@ -12,6 +12,9 @@
 # monitored with this plugin.
 #
 # $Log$
+# Revision 1.11  2005/02/16 20:32:17  jimmyo
+# Minor bugfix in linux/if_, with info fields.
+#
 # Revision 1.10  2005/02/16 17:08:24  jimmyo
 # linux/if* now treats ra* interfaces as wireless.
 #
@@ -105,7 +108,7 @@ if [ "$1" = "config" ]; then
 			iwlist $INTERFACE rate 2>/dev/null | awk '/Current Bit Rate/ { split ($0, arr, "="); split (arr[2], arr2, "M"); print (arr2[1]*1000000) " bits per second.\nup.max " (arr2[1]*1000000) "\ndown.max "(arr2[1]*1000000); }'
 			;;
 		*)
-			echo -n "$INTERFACE.info Traffic of the $INTERFACE interface. Maximum speed is "
+			echo -n "up.info Traffic of the $INTERFACE interface. Maximum speed is "
 			which ethtool >/dev/null 2>/dev/null || echo "undeterminable (please install ethtool)."
 			ethtool $INTERFACE 2>/dev/null | awk '/Speed/ { split ($2, arr2, "M"); print (arr2[1]*1000000) " bits per second.\nup.max " (arr2[1]*1000000) "\ndown.max "(arr2[1]*1000000); }'
 			;;
